bindings/c/include/xtreme3d.h

__declspec(dllimport) double KraftRigidBodyGetRight(double, double);
__declspec(dllimport) double KraftRigidBodySetAngularVelocity(double, double, double, double);
__declspec(dllimport) double KraftRigidBodyGetAngularVelocity(double, double);
__declspec(dllimport) double KraftRigidBodyAddForce(double, double, double, double);
__declspec(dllimport) double KraftRigidBodyAddForceAtPos(double, double, double, double, double, double, double);
__declspec(dllimport) double KraftRigidBodyAddRelForce(double, double, double, double);
__declspec(dllimport) double KraftRayCast(double, double, double, double, double, double, double, double);
__declspec(dllimport) double KraftObjectSetRigidBody(double, double);
__declspec(dllimport) double KraftCreateShapeSphere(double, double);
__declspec(dllimport) double KraftCreateShapeBox(double, double, double, double);
__declspec(dllimport) double KraftCreateShapePlane(double, double, double, double, double);
__declspec(dllimport) double KraftCreateShapeCapsule(double, double, double);
__declspec(dllimport) double KraftCreateShapeMesh(double, double);
__declspec(dllimport) double KraftShapeSetDensity(double, double);
__declspec(dllimport) double KraftShapeSetFriction(double, double);
__declspec(dllimport) double KraftShapeSetRestitution(double, double);
__declspec(dllimport) double KraftShapeSetPosition(double, double, double, double);
__declspec(dllimport) double KraftShapeGetPosition(double, double);
__declspec(dllimport) double KraftShapeSetRayCastable(double, double);
__declspec(dllimport) double KraftCreateJointDistance(double, double);
__declspec(dllimport) double KraftCreateJointRope(double, double, double);
__declspec(dllimport) double KraftCreateJointBallSocket(double, double);
__declspec(dllimport) double KraftCreateJointFixed(double, double);
__declspec(dllimport) double KraftCreateJointHinge(double, double);
__declspec(dllimport) double KraftJointSetAnchor1(double, double, double, double);
__declspec(dllimport) double KraftJointSetAnchor2(double, double, double, double);
__declspec(dllimport) double KraftJointSetHingeAxis1(double, double, double, double);
__declspec(dllimport) double KraftJointSetHingeAxis2(double, double, double, double);
/* lensflare.pas */
__declspec(dllimport) double LensflareCreate(double);
__declspec(dllimport) double LensflareSetSize(double, double);
__declspec(dllimport) double LensflareSetSeed(double, double);
__declspec(dllimport) double LensflareSetSqueeze(double, double);
__declspec(dllimport) double LensflareSetStreaks(double, double);
__declspec(dllimport) double LensflareSetStreakWidth(double, double);
__declspec(dllimport) double LensflareSetSecs(double, double);
__declspec(dllimport) double LensflareSetResolution(double, double);
__declspec(dllimport) double LensflareSetElements(double, double, double, double, double, double);
__declspec(dllimport) double LensflareSetGradients(double, double, double, double, double, double);
/* light.pas */
__declspec(dllimport) double LightCreate(double, double);
__declspec(dllimport) double LightSetAmbientColor(double, double);
__declspec(dllimport) double LightSetDiffuseColor(double, double);
__declspec(dllimport) double LightSetSpecularColor(double, double);
__declspec(dllimport) double LightSetAttenuation(double, double, double, double);
__declspec(dllimport) double LightSetShining(double, double);
__declspec(dllimport) double LightSetSpotCutoff(double, double);
__declspec(dllimport) double LightSetSpotExponent(double, double);
__declspec(dllimport) double LightSetSpotDirection(double, double, double, double);
__declspec(dllimport) double LightSetStyle(double, double);
__declspec(dllimport) double LightGetColor(double, double);