bindings/python3/xtreme3d/x3dfuncs.py


x3d.KraftRigidBodyGetRight.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodyGetRight.restype = ctypes.c_double
def KraftRigidBodyGetRight(aKrb, aIndex):
    return x3d.KraftRigidBodyGetRight(aKrb, aIndex)

x3d.KraftRigidBodySetAngularVelocity.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodySetAngularVelocity.restype = ctypes.c_double
def KraftRigidBodySetAngularVelocity(aKrb, aX, aY, aZ):
    return x3d.KraftRigidBodySetAngularVelocity(aKrb, aX, aY, aZ)

x3d.KraftRigidBodyGetAngularVelocity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodyGetAngularVelocity.restype = ctypes.c_double
def KraftRigidBodyGetAngularVelocity(aKrb, aIndex):
    return x3d.KraftRigidBodyGetAngularVelocity(aKrb, aIndex)

x3d.KraftRigidBodyAddForce.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodyAddForce.restype = ctypes.c_double
def KraftRigidBodyAddForce(aKrb, aX, aY, aZ):
    return x3d.KraftRigidBodyAddForce(aKrb, aX, aY, aZ)

x3d.KraftRigidBodyAddForceAtPos.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodyAddForceAtPos.restype = ctypes.c_double
def KraftRigidBodyAddForceAtPos(aKrb, aX, aY, aZ, aPx, aPy, aPz):
    return x3d.KraftRigidBodyAddForceAtPos(aKrb, aX, aY, aZ, aPx, aPy, aPz)

x3d.KraftRigidBodyAddRelForce.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodyAddRelForce.restype = ctypes.c_double
def KraftRigidBodyAddRelForce(aKrb, aX, aY, aZ):
    return x3d.KraftRigidBodyAddRelForce(aKrb, aX, aY, aZ)

x3d.KraftRayCast.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftRayCast.restype = ctypes.c_double
def KraftRayCast(aKr, aX, aY, aZ, aDx, aDy, aDz, aMaxtime):
    return x3d.KraftRayCast(aKr, aX, aY, aZ, aDx, aDy, aDz, aMaxtime)

x3d.KraftObjectSetRigidBody.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftObjectSetRigidBody.restype = ctypes.c_double
def KraftObjectSetRigidBody(aObj, aKrb):
    return x3d.KraftObjectSetRigidBody(aObj, aKrb)

x3d.KraftCreateShapeSphere.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftCreateShapeSphere.restype = ctypes.c_double
def KraftCreateShapeSphere(aRbody, aRadius):
    return x3d.KraftCreateShapeSphere(aRbody, aRadius)

x3d.KraftCreateShapeBox.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftCreateShapeBox.restype = ctypes.c_double
def KraftCreateShapeBox(aRbody, aX, aY, aZ):
    return x3d.KraftCreateShapeBox(aRbody, aX, aY, aZ)

x3d.KraftCreateShapePlane.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftCreateShapePlane.restype = ctypes.c_double
def KraftCreateShapePlane(aRbody, aX, aY, aZ, aD):
    return x3d.KraftCreateShapePlane(aRbody, aX, aY, aZ, aD)

x3d.KraftCreateShapeCapsule.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftCreateShapeCapsule.restype = ctypes.c_double
def KraftCreateShapeCapsule(aRbody, aRadius, aHeight):
    return x3d.KraftCreateShapeCapsule(aRbody, aRadius, aHeight)

x3d.KraftCreateShapeMesh.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftCreateShapeMesh.restype = ctypes.c_double
def KraftCreateShapeMesh(aRbody, aFf):
    return x3d.KraftCreateShapeMesh(aRbody, aFf)

x3d.KraftShapeSetDensity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftShapeSetDensity.restype = ctypes.c_double
def KraftShapeSetDensity(aShape, aDensity):
    return x3d.KraftShapeSetDensity(aShape, aDensity)

x3d.KraftShapeSetFriction.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftShapeSetFriction.restype = ctypes.c_double
def KraftShapeSetFriction(aShape, aFriction):
    return x3d.KraftShapeSetFriction(aShape, aFriction)

x3d.KraftShapeSetRestitution.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftShapeSetRestitution.restype = ctypes.c_double
def KraftShapeSetRestitution(aShape, aRest):
    return x3d.KraftShapeSetRestitution(aShape, aRest)

x3d.KraftShapeSetPosition.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftShapeSetPosition.restype = ctypes.c_double
def KraftShapeSetPosition(aShape, aX, aY, aZ):
    return x3d.KraftShapeSetPosition(aShape, aX, aY, aZ)

x3d.KraftShapeGetPosition.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftShapeGetPosition.restype = ctypes.c_double
def KraftShapeGetPosition(aShape, aIndex):
    return x3d.KraftShapeGetPosition(aShape, aIndex)

x3d.KraftShapeSetRayCastable.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftShapeSetRayCastable.restype = ctypes.c_double
def KraftShapeSetRayCastable(aShape, aMode):
    return x3d.KraftShapeSetRayCastable(aShape, aMode)

x3d.KraftCreateJointDistance.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftCreateJointDistance.restype = ctypes.c_double
def KraftCreateJointDistance(aRbody1, aRbody2):
    return x3d.KraftCreateJointDistance(aRbody1, aRbody2)

x3d.KraftCreateJointRope.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftCreateJointRope.restype = ctypes.c_double
def KraftCreateJointRope(aRbody1, aRbody2, aMaxlength):
    return x3d.KraftCreateJointRope(aRbody1, aRbody2, aMaxlength)

x3d.KraftCreateJointBallSocket.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftCreateJointBallSocket.restype = ctypes.c_double
def KraftCreateJointBallSocket(aRbody1, aRbody2):
    return x3d.KraftCreateJointBallSocket(aRbody1, aRbody2)

x3d.KraftCreateJointFixed.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftCreateJointFixed.restype = ctypes.c_double
def KraftCreateJointFixed(aRbody1, aRbody2):
    return x3d.KraftCreateJointFixed(aRbody1, aRbody2)

x3d.KraftCreateJointHinge.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftCreateJointHinge.restype = ctypes.c_double
def KraftCreateJointHinge(aRbody1, aRbody2):
    return x3d.KraftCreateJointHinge(aRbody1, aRbody2)

x3d.KraftJointSetAnchor1.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftJointSetAnchor1.restype = ctypes.c_double
def KraftJointSetAnchor1(aJoint, aX, aY, aZ):
    return x3d.KraftJointSetAnchor1(aJoint, aX, aY, aZ)

x3d.KraftJointSetAnchor2.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftJointSetAnchor2.restype = ctypes.c_double
def KraftJointSetAnchor2(aJoint, aX, aY, aZ):
    return x3d.KraftJointSetAnchor2(aJoint, aX, aY, aZ)

x3d.KraftJointSetHingeAxis1.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftJointSetHingeAxis1.restype = ctypes.c_double
def KraftJointSetHingeAxis1(aJoint, aX, aY, aZ):
    return x3d.KraftJointSetHingeAxis1(aJoint, aX, aY, aZ)

x3d.KraftJointSetHingeAxis2.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftJointSetHingeAxis2.restype = ctypes.c_double
def KraftJointSetHingeAxis2(aJoint, aX, aY, aZ):
    return x3d.KraftJointSetHingeAxis2(aJoint, aX, aY, aZ)


# lensflare.pas
x3d.LensflareCreate.argtypes = [ctypes.c_double]
x3d.LensflareCreate.restype = ctypes.c_double
def LensflareCreate(aParent):
    return x3d.LensflareCreate(aParent)

x3d.LensflareSetSize.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LensflareSetSize.restype = ctypes.c_double
def LensflareSetSize(aLensflare, aSize):
    return x3d.LensflareSetSize(aLensflare, aSize)

x3d.LensflareSetSeed.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LensflareSetSeed.restype = ctypes.c_double
def LensflareSetSeed(aLensflare, aSeed):
    return x3d.LensflareSetSeed(aLensflare, aSeed)

x3d.LensflareSetSqueeze.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LensflareSetSqueeze.restype = ctypes.c_double
def LensflareSetSqueeze(aLensflare, aSqueeze):
    return x3d.LensflareSetSqueeze(aLensflare, aSqueeze)

x3d.LensflareSetStreaks.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LensflareSetStreaks.restype = ctypes.c_double
def LensflareSetStreaks(aLensflare, aStreaks):
    return x3d.LensflareSetStreaks(aLensflare, aStreaks)

x3d.LensflareSetStreakWidth.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LensflareSetStreakWidth.restype = ctypes.c_double
def LensflareSetStreakWidth(aLensflare, aWidth):
    return x3d.LensflareSetStreakWidth(aLensflare, aWidth)

x3d.LensflareSetSecs.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LensflareSetSecs.restype = ctypes.c_double
def LensflareSetSecs(aLensflare, aSecs):
    return x3d.LensflareSetSecs(aLensflare, aSecs)

x3d.LensflareSetResolution.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LensflareSetResolution.restype = ctypes.c_double
def LensflareSetResolution(aLensflare, aRes):
    return x3d.LensflareSetResolution(aLensflare, aRes)

x3d.LensflareSetElements.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.LensflareSetElements.restype = ctypes.c_double
def LensflareSetElements(aLensflare, aGlow, aRing, aStreaks, aRays, aSecs):
    return x3d.LensflareSetElements(aLensflare, aGlow, aRing, aStreaks, aRays, aSecs)

x3d.LensflareSetGradients.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.LensflareSetGradients.restype = ctypes.c_double
def LensflareSetGradients(aLensflare, aInd, aColor1, aAlpha1, aColor2, aAlpha2):
    return x3d.LensflareSetGradients(aLensflare, aInd, aColor1, aAlpha1, aColor2, aAlpha2)


# light.pas
x3d.LightCreate.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightCreate.restype = ctypes.c_double
def LightCreate(aLs, aParent):
    return x3d.LightCreate(aLs, aParent)

x3d.LightSetAmbientColor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightSetAmbientColor.restype = ctypes.c_double
def LightSetAmbientColor(aLight, aColor):
    return x3d.LightSetAmbientColor(aLight, aColor)

x3d.LightSetDiffuseColor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightSetDiffuseColor.restype = ctypes.c_double
def LightSetDiffuseColor(aLight, aColor):
    return x3d.LightSetDiffuseColor(aLight, aColor)

x3d.LightSetSpecularColor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightSetSpecularColor.restype = ctypes.c_double
def LightSetSpecularColor(aLight, aColor):
    return x3d.LightSetSpecularColor(aLight, aColor)

x3d.LightSetAttenuation.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.LightSetAttenuation.restype = ctypes.c_double
def LightSetAttenuation(aLight, aAconst, aAlinear, aAquadratic):
    return x3d.LightSetAttenuation(aLight, aAconst, aAlinear, aAquadratic)

x3d.LightSetShining.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightSetShining.restype = ctypes.c_double
def LightSetShining(aLight, aMode):
    return x3d.LightSetShining(aLight, aMode)

x3d.LightSetSpotCutoff.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightSetSpotCutoff.restype = ctypes.c_double
def LightSetSpotCutoff(aLight, aCutoff):
    return x3d.LightSetSpotCutoff(aLight, aCutoff)

x3d.LightSetSpotExponent.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightSetSpotExponent.restype = ctypes.c_double
def LightSetSpotExponent(aLight, aExp):
    return x3d.LightSetSpotExponent(aLight, aExp)

x3d.LightSetSpotDirection.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.LightSetSpotDirection.restype = ctypes.c_double
def LightSetSpotDirection(aLight, aX, aY, aZ):
    return x3d.LightSetSpotDirection(aLight, aX, aY, aZ)

x3d.LightSetStyle.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightSetStyle.restype = ctypes.c_double
def LightSetStyle(aLight, aLs):
    return x3d.LightSetStyle(aLight, aLs)

x3d.LightGetColor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightGetColor.restype = ctypes.c_double
def LightGetColor(aLight, aIndex):
    return x3d.LightGetColor(aLight, aIndex)
